--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,135 @@
-@import url(reset.css);/*# sourceMappingURL=style.css.map */
+@import url(reset.css);
+@import url(https://fonts.googleapis.com/css?family=Inter:regular&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
+body {
+  font-size: 16px;
+  font-family: "Inter";
+  color: #1A4359;
+}
+
+.freeze {
+  overflow: hidden;
+}
+
+.container {
+  width: 100%;
+  padding: 1.69rem 2rem;
+  background-color: #1974CE;
+}
+
+.btn {
+  font-size: inherit;
+  padding: 0.4375rem 1.1875rem 0.6875rem;
+  border-radius: 0.5rem;
+}
+
+.btn-blue {
+  background-color: #84EDFB;
+  border: 1px solid #84EDFB;
+}
+.btn-blue:hover, .btn-blue:focus {
+  outline: none;
+  background-color: #fff;
+  border: 1px solid #fff;
+  box-shadow: 0 0 3px #fff;
+}
+
+.burger {
+  display: none;
+  position: relative;
+  z-index: 2;
+  width: 2.5em;
+  height: 2.5em;
+  position: relative;
+}
+@media (max-width: 767px) {
+  .burger {
+    display: block;
+  }
+}
+.burger span, .burger::before, .burger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+}
+.burger::before {
+  top: 10%;
+}
+.burger span {
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.burger::after {
+  bottom: 10%;
+}
+.burger:hover, .burger:focus {
+  outline: none;
+}
+.burger:hover span, .burger:hover::before, .burger:hover::after, .burger:focus span, .burger:focus::before, .burger:focus::after {
+  box-shadow: 0 0 5px #fff;
+}
+.burger_active::before {
+  top: 50%;
+  transform: translate(0, -50%) rotate(45deg);
+}
+.burger_active span {
+  opacity: 0;
+}
+.burger_active::after {
+  bottom: 50%;
+  transform: translate(0, 50%) rotate(-45deg);
+}
+
+.menu {
+  display: flex;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+.menu__link {
+  display: block;
+  line-height: 1.31;
+  color: #FBF9F3;
+}
+.menu__link:hover, .menu__link:focus {
+  outline: none;
+  color: #84EDFB;
+}
+@media (max-width: 767px) {
+  .menu {
+    position: absolute;
+    top: -100vh;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #1974CE;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu__link {
+    padding: 0.5rem;
+  }
+}
+.menu_active {
+  top: 0;
+}
+
+.header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__login {
+  position: relative;
+  z-index: 2;
+}/*# sourceMappingURL=style.css.map */
