--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,142 @@
 @import url(reset.css);
+@import url(https://fonts.googleapis.com/css?family=Inter:regular&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
 
+body{
+  font-size: 16px;
+  font-family: 'Inter';
+  color: #1A4359;
+}
+.freeze{
+  overflow: hidden;
+}
+
+.container{
+  width: 100%;
+  padding: 1.69rem 2rem;
+  background-color: #1974CE;
+}
+.btn{
+  font-size: inherit;
+  padding: 0.4375rem 1.1875rem 0.6875rem;
+  border-radius: 0.5rem;
+}
+.btn-blue{
+  background-color: #84EDFB;
+  border: 1px solid #84EDFB;
+  &:hover, &:focus{
+    outline: none;
+    background-color: #fff;
+    border: 1px solid #fff;
+    box-shadow: 0 0 3px #fff;
+  }
+}
+
+// --------------------------------------------------------------------
+
+
+.burger {
+  display: none;
+  @media (max-width: 767px) {
+    display: block;
+  }
+  position: relative;
+  z-index: 2;
+  width: 2.5em;
+  height: 2.5em;
+  position: relative;
+  span, &::before, &::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+  }
+  &::before{
+    top: 10%;
+  }
+  span{
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+  &::after{
+    bottom: 10%;
+  }
+
+  &:hover, &:focus{
+    outline: none;
+    span, &::before, &::after{
+      box-shadow: 0 0 5px #fff;
+    }
+  }
+  
+  &_active{
+    &::before{
+      top: 50%;
+      transform: translate(0, -50%) rotate(45deg);
+    }
+    span{
+      opacity: 0;
+    }
+    &::after{
+      bottom: 50%;
+      transform: translate(0, 50%) rotate(-45deg);
+    }
+  }
+  
+}
+
+.menu {
+  display: flex;
+  column-gap: 2rem;
+  &__link {
+    display: block;
+    line-height: 1.31; 
+    color: #FBF9F3;
+    &:hover, &:focus{
+      outline: none;
+      color: #84EDFB;
+    }
+  }
+  @media (max-width: 767px) {
+    position: absolute;
+    top: -100vh;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #1974CE;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    &__link{
+      padding: 0.5rem;
+    }
+  }
+  &_active{
+    top: 0;
+  }
+}
+
+.login {
+
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  &__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__burger {
+    
+  }
+  &__login {
+    position: relative;
+    z-index: 2;
+  }
+}
