--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(reset.css);
+@import url(swiper-bundle.min.css);
 @import url(https://fonts.googleapis.com/css?family=Inter:regular&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
 body {
@@ -121,6 +122,7 @@ body {
 .header {
   position: -webkit-sticky;
   position: sticky;
+  z-index: 2;
   top: 0;
   width: 100%;
 }
@@ -132,4 +134,109 @@ body {
 .header__login {
   position: relative;
   z-index: 2;
+}
+
+.hero__container {
+  padding-top: calc(1.43rem + 71 * (100vw - 320px) / 880);
+  padding-bottom: calc(1.43rem + 71 * (100vw - 320px) / 880);
+  display: flex;
+  gap: 1rem;
+}
+@media (max-width: 767px) {
+  .hero__container {
+    display: block;
+  }
+}
+.hero__main {
+  flex: 0 0 48.333%;
+}
+.hero__title {
+  margin-bottom: calc(2.145rem + 25 * (100vw - 320px) / 880);
+  font-family: "Roboto";
+  font-size: calc(2.85rem + 22 * (100vw - 320px) / 880);
+  line-height: 1.03;
+  color: #fff;
+  max-width: 31.25rem;
+}
+.hero__description {
+  margin-bottom: 2.8125rem;
+  font-family: "Roboto";
+  font-size: 1.75rem;
+  line-height: 1.26;
+  letter-spacing: 0.0781rem;
+  color: #fff;
+  max-width: 503px;
+}
+.hero__btn {
+  margin-bottom: 3.75rem;
+  width: 100%;
+  max-width: 26.25rem;
+  padding: 0.875rem 0 1.125rem;
+}
+.hero__categories-slide {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.hero__footer-slide {
+  width: auto;
+  line-height: 1.3;
+  color: #fff;
+}
+
+.categories-item {
+  min-height: 0px;
+  min-width: 0px;
+  max-width: 560px;
+  padding: 1rem;
+  background-color: #F9F6EE;
+  border-radius: 0.625rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  position: relative;
+}
+.categories-item__title {
+  z-index: 1;
+  margin-bottom: 8.3125rem;
+  font-size: 1.5625rem;
+  line-height: 1.28;
+  letter-spacing: 0.125rem;
+  color: #1974CE;
+}
+.categories-item__img {
+  z-index: 1;
+  grid-row: span 2;
+  padding-top: 0.875rem;
+  align-self: center;
+}
+.categories-item__link {
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: inherit;
+  line-height: 1.3;
+  color: inherit;
+}
+.categories-item__link img {
+  padding: 0.0563rem 0.1087rem 0.1106rem 0.115rem;
+  transition: all 0.2s ease 0s;
+}
+.categories-item__link_green img {
+  background-color: #D7EA92;
+}
+.categories-item__link_red img {
+  background-color: #EC9A88;
+}
+.categories-item__link:hover img, .categories-item__link:focus img {
+  transform: translate(1rem, 0);
+}
+.categories-item::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 52.83%;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(25, 116, 206, 0.5019607843);
 }/*# sourceMappingURL=style.css.map */
