--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import url(reset.css);
+@import url(swiper-bundle.min.css);
 @import url(https://fonts.googleapis.com/css?family=Inter:regular&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
 
@@ -119,12 +120,9 @@ body{
   }
 }
 
-.login {
-
-}
-
 .header {
   position: sticky;
+  z-index: 2;
   top: 0;
   width: 100%;
   &__container{
@@ -132,11 +130,141 @@ body{
     justify-content: space-between;
     align-items: center;
   }
-  &__burger {
-    
-  }
   &__login {
     position: relative;
     z-index: 2;
   }
 }
+
+
+// --------------------------------------------------------------------
+
+.main {
+}
+.hero {
+  &__container{
+    padding-top: calc(1.43rem + (71) * (100vw - 320px) / (1200 - 320));
+    padding-bottom: calc(1.43rem + (71) * (100vw - 320px) / (1200 - 320));
+    display: flex;
+    gap: 1rem;
+    @media (max-width: 767px) {
+     display: block;
+    }
+  }
+  &__main {
+    flex: 0 0 48.333%;
+  }
+  &__title {
+    margin-bottom: calc(2.145rem + (25) * (100vw - 320px) / (1200 - 320));
+    font-family: 'Roboto';
+    font-size: calc(2.85rem + 22 * (100vw - 320px) / (1200 - 320));
+    line-height: 1.03;
+    color: #fff;
+    max-width: 31.25rem;
+  }
+  &__description {
+    margin-bottom: 2.8125rem;
+    font-family: 'Roboto';
+    font-size: 1.75rem;
+    line-height: 1.26;
+    letter-spacing: 0.0781rem;
+    color: #fff;
+    max-width: 503px;
+  }
+  &__btn {
+    margin-bottom: 3.75rem;
+    width: 100%;
+    max-width: 26.25rem;
+    padding: 0.875rem 0 1.125rem;
+  }
+  &__categories {
+  }
+  &__categories-body {
+  }
+  &__categories-slide {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  &__categories-item {
+  }
+  &__footer {
+
+  }
+  &__footer-slide{
+    width: auto;
+    line-height: 1.3;
+    color: #fff;
+  }
+}
+.categories-item {
+  min-height: 0px;
+  min-width: 0px;
+  max-width: 560px;
+  padding: 1rem;
+  background-color: #F9F6EE;
+  border-radius: 0.625rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  position: relative;
+  &__title {
+    z-index: 1;
+    margin-bottom: 8.3125rem;
+    font-size: 1.5625rem;
+    line-height: 1.28;
+    letter-spacing: 0.125rem;
+    color: #1974CE;
+  }
+  &__img {
+    z-index: 1;
+    grid-row: span 2;
+    padding-top: 0.875rem;
+    align-self: center;
+  }
+  &__link {
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: inherit;
+    line-height: 1.3;
+    color: inherit;
+    img{
+      padding: 0.0563rem 0.1087rem 0.1106rem 0.115rem;
+      transition: all 0.2s ease 0s;
+    }
+    &_green {
+      img{
+        background-color: #D7EA92;
+      }
+    }
+    &_red {
+      img{
+        background-color: #EC9A88;
+      }
+    }
+    &:hover, &:focus{
+      img{
+        transform: translate(1rem, 0);
+      }
+    }
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 52.83%;
+    
+    width: 100%;
+    height: 1px;
+    background-color: #1974CE80;
+  }
+}
+.hero {
+		
+}
+.swiper-wrapper {
+}
+.swiper-slide {
+}
+
