--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 .container {
   width: 100%;
   padding: 1.69rem 2rem;
-  background-color: #1974CE;
 }
 
 .btn {
@@ -87,7 +86,7 @@ body {
 .menu {
   display: flex;
   -moz-column-gap: 2rem;
-       column-gap: 2rem;
+  column-gap: 2rem;
 }
 .menu__link {
   display: block;
@@ -113,6 +112,7 @@ body {
   }
   .menu__link {
     padding: 0.5rem;
+    font-size: 20px;
   }
 }
 .menu_active {
@@ -120,11 +120,11 @@ body {
 }
 
 .header {
-  position: -webkit-sticky;
   position: sticky;
   z-index: 2;
   top: 0;
   width: 100%;
+  background-color: #1974CE;
 }
 .header__container {
   display: flex;
@@ -136,6 +136,9 @@ body {
   z-index: 2;
 }
 
+.hero {
+  background-color: #1974CE;
+}
 .hero__container {
   padding-top: calc(1.43rem + 71 * (100vw - 320px) / 880);
   padding-bottom: calc(1.43rem + 71 * (100vw - 320px) / 880);
@@ -239,4 +242,132 @@ body {
   width: 100%;
   height: 1px;
   background-color: rgba(25, 116, 206, 0.5019607843);
+}
+
+.steps {
+  padding: 92px 0 170px;
+  padding-top: calc(1.43rem + 70 * (100vw - 320px) / 880);
+  padding-bottom: calc(2.14rem + 140 * (100vw - 320px) / 880);
+}
+.steps__container {
+  display: flex;
+  flex-direction: column;
+}
+.steps__header {
+  align-self: center;
+  width: 100%;
+  max-width: 60.875rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-bottom: calc(2.145rem + 25 * (100vw - 320px) / 880);
+}
+@media (max-width: 991px) {
+  .steps__header {
+    align-items: center;
+  }
+}
+.steps__header-wrapper {
+  max-width: 575px;
+  color: #1A4359;
+}
+.steps__title {
+  margin-bottom: calc(2.145rem + 25 * (100vw - 320px) / 880);
+  font-family: "Roboto";
+  font-size: calc(2.15rem + 15 * (100vw - 320px) / 880);
+  line-height: 1.07;
+}
+.steps__subtitle {
+  font-size: calc(1rem + 4 * (100vw - 320px) / 880);
+  line-height: 1.16;
+}
+.steps__cards {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(292px, 312px));
+  justify-content: space-between;
+  gap: 1.875rem;
+}
+@media (max-width: 991px) {
+  .steps__cards {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 767px) {
+  .steps__cards {
+    display: block;
+  }
+}
+
+.card {
+  width: 100%;
+  max-width: 19.5rem;
+  border-bottom: 1px solid rgba(25, 116, 206, 0.5019607843);
+}
+@media (max-width: 767px) {
+  .card {
+    margin-bottom: 1.875rem;
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: auto 1fr;
+    gap: 1.25rem;
+  }
+}
+@media (max-width: 479px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0px;
+  }
+}
+.card__img {
+  width: 100%;
+  position: relative;
+  margin-bottom: 21px;
+}
+@media (max-width: 767px) {
+  .card__img {
+    grid-row: span 2;
+  }
+}
+@media (max-width: 479px) {
+  .card__img {
+    width: 200px;
+  }
+}
+.card__img img {
+  width: 100%;
+  border-radius: 8px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
+}
+.card__number {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  width: 46px;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1A4359;
+  line-height: 1.3;
+  color: #FBF9F3;
+}
+.card__title {
+  margin-bottom: 19px;
+  font-family: "Roboto";
+  font-size: calc(1.25rem + 10 * (100vw - 320px) / 880);
+  line-height: 1.07;
+  color: #1974CE;
+}
+.card__descrioption {
+  font-size: calc(0.8125rem + 3 * (100vw - 320px) / 880);
+  margin-bottom: 22px;
+  line-height: 1.3;
+  color: #1A4359;
 }/*# sourceMappingURL=style.css.map */
