--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-size: 16px;
   font-family: "Inter";
   color: #1A4359;
+  background-color: #FBF9F3;
 }
 
 .freeze {
@@ -14,7 +15,7 @@ body {
 
 .container {
   width: 100%;
-  padding: 1.69rem 2rem;
+  padding: 0 2rem;
 }
 
 .btn {
@@ -127,6 +128,7 @@ body {
   background-color: #1974CE;
 }
 .header__container {
+  padding: 1.69rem 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -182,6 +184,7 @@ body {
   gap: 1rem;
 }
 .hero__footer-slide {
+  margin-bottom: 1.9375rem;
   width: auto;
   line-height: 1.3;
   color: #fff;
@@ -248,6 +251,11 @@ body {
   padding: 92px 0 170px;
   padding-top: calc(1.43rem + 70 * (100vw - 320px) / 880);
   padding-bottom: calc(2.14rem + 140 * (100vw - 320px) / 880);
+}
+@media (max-width: 767px) {
+  .steps {
+    padding-bottom: 0.75rem;
+  }
 }
 .steps__container {
   display: flex;
@@ -378,4 +386,11 @@ body {
   margin-bottom: 22px;
   line-height: 1.3;
   color: #1A4359;
+}
+
+.big-img {
+  padding-bottom: calc(2.14rem + 36 * (100vw - 320px) / 880);
+}
+.big-img img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
