--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@ body{
   font-size: 16px;
   font-family: 'Inter';
   color: #1A4359;
+  background-color: #FBF9F3;
 }
 .freeze{
   overflow: hidden;
@@ -14,7 +15,7 @@ body{
 
 .container{
   width: 100%;
-  padding: 1.69rem 2rem;
+  padding: 0 2rem;
 }
 .btn{
   font-size: inherit;
@@ -129,6 +130,7 @@ body{
   width: 100%;
   background-color: #1974CE;
   &__container{
+    padding: 1.69rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -185,6 +187,7 @@ body{
     gap: 1rem;
   }
   &__footer-slide{
+    margin-bottom: 1.9375rem;
     width: auto;
     line-height: 1.3;
     color: #fff;
@@ -261,6 +264,9 @@ body{
   padding: 92px 0 170px;
   padding-top: calc(1.43rem + (70) * (100vw - 320px) / (1200 - 320));
   padding-bottom: calc(2.14rem + (140) * (100vw - 320px) / (1200 - 320));
+  @media (max-width: 767px) {
+    padding-bottom: 0.75rem;
+  }
   &__container {
     display: flex;
     flex-direction: column;
@@ -374,5 +380,15 @@ body{
     margin-bottom: 22px;
     line-height: 1.3;
     color: #1A4359;
+  }
+}
+
+
+// big-img ------------------------------------------------------------
+
+.big-img {
+  padding-bottom: calc(2.14rem + (36) * (100vw - 320px) / (1200 - 320));
+  img{
+    width: 100%;
   }
 }
