--- a/css/style.scss
+++ b/css/style.scss
@@ -392,3 +392,188 @@ body{
     width: 100%;
   }
 }
+
+
+// stories ------------------------------------------------------------
+
+.stories {
+  // margin-top: 93px;
+  margin-top: calc(23px + (70) * (100vw - 320px) / (1200 - 320));
+  margin-bottom: 199px;
+  margin-bottom: calc(39px + (60) * (100vw - 320px) / (1200 - 320));
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    @media (max-width: 767px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  &__title {
+    margin-bottom: 1.875rem;
+    max-width: 30.5rem;
+    font-family: 'Roboto';
+    font-size: calc(2.28rem + (16) * (100vw - 320px) / (1200 - 320));
+    line-height: 1;
+    color: #1974CE;
+    @media (max-width: 767px) {
+      text-align: center;
+    }
+  }
+  &__rate {
+    margin-top: 6px;
+    margin-bottom: calc(39px + (30) * (100vw - 320px) / (1200 - 320));
+    justify-self: end;
+    
+  }
+  &__reviews {
+    grid-column: span 2;
+    width: 100%;
+  }
+  &__arrows {
+    margin-bottom: calc(24px + (24) * (100vw - 320px) / (1200 - 320));
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    @media (max-width: 767px) {
+      justify-content: center;
+      gap: 3rem;
+    }
+  }
+  &__left {
+    transform: rotate(180deg);
+    background-color: #1974CE;
+    padding: 1px;
+  }
+  &__right {
+    background-color: #1974CE;
+    padding: 1px;
+  }
+}
+
+.rate {
+  width: 100%;
+  max-width: 408px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  @media (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__img {
+    margin-top: 8px;
+    margin-bottom: 14px;
+  }
+  &__general {
+    min-width: 151px;
+    padding-bottom: 20px;
+  }
+  &__mark {
+    margin-right: 15px;
+    font-family: "Roboto";
+    font-size: 23px;
+    line-height: 1.04;
+  }
+  &__reviews {
+    font-size: 15px;
+    line-height: 1.39;
+  }
+  &__stars {
+  }
+}
+.stars {
+  font-size: 11px;
+  line-height: 1.31;
+  &__item {
+    margin-bottom: 5px;
+    display: flex;
+  }
+  &__mark {
+    cursor: default;
+    margin-right: 8px;
+    width: 37px;
+  }
+  &__line {
+    margin-right: 8px;
+    width: 142px;
+    height: 16px;
+    border-radius: 2px;
+    background-color: #fff;
+    position: relative;
+    &>span{
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 0%;
+      border-radius: inherit;
+      background-color: #D7EA92;
+    }
+    &>div{
+      content: '0%';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      z-index: 0;
+      text-align: center;
+      opacity: 0;
+      transition: all 0.1s ease 0s;
+    }
+  }
+  &__count{
+    cursor: default;
+  }
+  &__item:hover{
+    .stars__line>div{
+      opacity: 100%;
+    }
+  }
+}
+.review {
+  max-width: 363px;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  &__title {
+    margin-bottom: 1.0625rem;
+    font-size: 1.125rem;
+    line-height: 1.3;
+    color: #1974CE;
+  }
+  &__author {
+    margin-bottom: 1.125rem;
+    margin-left: 35%;
+    font-size: 10px;
+    line-height: 1.2;
+    color: #1A4359;
+  }
+  &__content {
+    margin-bottom: 2.75rem;
+    text-align: justify;
+    line-height: 1.3;
+  }
+  &__footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    line-height: 1.2;
+    p{
+      display: flex; 
+      align-items: center;
+      gap: 5px;
+      img{
+        width: 17px;
+        height: 18px;
+        border-radius: 50%;
+        background-color: #80B927;
+        padding: 5px 4.5px 4.5px 5px;
+      }
+    }
+  }
+}
