--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,6 @@ body {
 
 .stories {
   margin-top: calc(23px + 70 * (100vw - 320px) / 880);
-  margin-bottom: 199px;
   margin-bottom: calc(39px + 60 * (100vw - 320px) / 880);
 }
 .stories__container {
@@ -578,4 +577,129 @@ body {
   border-radius: 50%;
   background-color: #80B927;
   padding: 5px 4.5px 4.5px 5px;
+}
+
+.procedures {
+  padding-top: calc(23px + 70 * (100vw - 320px) / 880);
+  padding-bottom: calc(23px + 72 * (100vw - 320px) / 880);
+}
+.procedures__title {
+  margin-bottom: calc(21px + 40 * (100vw - 320px) / 880);
+  margin-left: 25%;
+  font-family: "Roboto";
+  font-size: calc(2.2857rem + 11 * (100vw - 320px) / 880);
+  line-height: 1.12;
+}
+@media (max-width: 767px) {
+  .procedures__title {
+    margin-left: 0;
+    text-align: center;
+  }
+}
+.procedures__description {
+  margin-bottom: calc(31px + 140 * (100vw - 320px) / 880);
+  margin-left: 25%;
+  max-width: 350px;
+  font-size: 18px;
+  font-size: calc(1rem + 4 * (100vw - 320px) / 880);
+  line-height: 1.3;
+}
+@media (max-width: 767px) {
+  .procedures__description {
+    margin-left: 0;
+    text-align: center;
+    max-width: 100%;
+  }
+}
+.procedures__body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  -moz-column-gap: calc(26px + 90 * (100vw - 320px) / 880);
+       column-gap: calc(26px + 90 * (100vw - 320px) / 880);
+}
+@media (max-width: 767px) {
+  .procedures__body {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+}
+.procedures__main {
+  display: flex;
+  flex-direction: column;
+  gap: calc(23px + 90 * (100vw - 320px) / 880);
+}
+@media (max-width: 767px) {
+  .procedures__main {
+    gap: 0;
+  }
+}
+.procedures__side {
+  width: 100%;
+}
+.procedures__side img {
+  width: 100%;
+  max-width: 390px;
+}
+
+.category__header {
+  margin-bottom: 28px;
+  margin-bottom: calc(8px + 20 * (100vw - 320px) / 880);
+  cursor: default;
+}
+@media (max-width: 767px) {
+  .category__header {
+    cursor: pointer;
+  }
+}
+.category__title {
+  font-family: "Roboto";
+  font-size: 30px;
+  font-size: calc(1.57rem + 8 * (100vw - 320px) / 880);
+  line-height: 1.07;
+  color: #1974CE;
+}
+.category__body {
+  overflow: hidden;
+}
+.category__description {
+  font-size: 17px;
+  font-size: calc(1rem + 3 * (100vw - 320px) / 880);
+  line-height: 1.38;
+  padding-bottom: calc(8px + 5 * (100vw - 320px) / 880);
+  border-bottom: 1px solid rgba(25, 116, 206, 0.5019607843);
+}
+.category__items a {
+  padding-top: 17px;
+  padding-top: calc(8px + 9 * (100vw - 320px) / 880);
+  padding-bottom: calc(7px + 8 * (100vw - 320px) / 880);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: inherit;
+  border-bottom: 1px solid rgba(25, 116, 206, 0.5019607843);
+  transition: all 0.1s ease 0s;
+}
+.category__items a::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #1974CE;
+  background-image: url(../img/arrow-right-round.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.category__items a:hover, .category__items a:focus {
+  outline: none;
+  color: #1974CE;
+}
+@media (min-width: 768px) {
+  .category__items a:hover, .category__items a:focus {
+    transform: translate(10px, 0);
+  }
+}
+@media (max-width: 767px) {
+  .category__items {
+    margin-bottom: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
