--- a/css/style.scss
+++ b/css/style.scss
@@ -397,9 +397,7 @@ body{
 // stories ------------------------------------------------------------
 
 .stories {
-  // margin-top: 93px;
   margin-top: calc(23px + (70) * (100vw - 320px) / (1200 - 320));
-  margin-bottom: 199px;
   margin-bottom: calc(39px + (60) * (100vw - 320px) / (1200 - 320));
   &__container {
     display: grid;
@@ -574,6 +572,125 @@ body{
         background-color: #80B927;
         padding: 5px 4.5px 4.5px 5px;
       }
+    }
+  }
+}
+
+
+// procedures ---------------------------------------------------------
+
+.procedures {
+  padding-top: calc(23px + (70) * (100vw - 320px) / (1200 - 320));
+  padding-bottom: calc(23px + (72) * (100vw - 320px) / (1200 - 320));
+  &__title {
+    margin-bottom: calc(21px + (40) * (100vw - 320px) / (1200 - 320));
+    margin-left: 25%;
+    font-family: "Roboto";
+    font-size: calc(2.2857rem + (11) * (100vw - 320px) / (1200 - 320));
+    line-height: 1.12;
+    @media (max-width: 767px) {
+      margin-left: 0;
+      text-align: center;
+    }
+  }
+  &__description {
+    margin-bottom: calc(31px + (140) * (100vw - 320px) / (1200 - 320));
+    margin-left: 25%;
+    max-width: 350px;
+    font-size: 18px;
+    font-size: calc(1rem + (4) * (100vw - 320px) / (1200 - 320));
+    line-height: 1.3;
+    @media (max-width: 767px) {
+      margin-left: 0;
+      text-align: center;
+      max-width: 100%;
+    }
+  }
+  &__body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: calc(26px + (90) * (100vw - 320px) / (1200 - 320));
+    @media (max-width:767px) {
+      grid-template-columns: 1fr;
+      row-gap: 20px;
+    }
+  }
+  &__main {
+    display: flex;
+    flex-direction: column;
+    gap: calc(23px + (90) * (100vw - 320px) / (1200 - 320));
+    @media (max-width:767px) {
+      gap: 0;
+    }
+  }
+  &__category {
+  }
+  &__side {
+    width: 100%;
+    img{
+      width: 100%;
+      max-width: 390px;
+    }
+  }
+}
+.category {
+  &__header{
+    margin-bottom: 28px;
+    margin-bottom: calc(8px + (20) * (100vw - 320px) / (1200 - 320));
+    cursor: default;
+    @media (max-width: 767px) {
+      cursor: pointer;
+    }
+  }
+  &__title {
+    font-family: "Roboto";
+    font-size: 30px;
+    font-size: calc(1.57rem + (8) * (100vw - 320px) / (1200 - 320));
+    line-height: 1.07;
+    color: #1974CE;
+  }
+  &__body{
+    // toggle hidden on mobile width
+    overflow: hidden;
+  }
+  &__description {
+    font-size: 17px;
+    font-size: calc(1rem + (3) * (100vw - 320px) / (1200 - 320));
+    line-height: 1.38;
+    padding-bottom: calc(8px + (5) * (100vw - 320px) / (1200 - 320));
+    border-bottom: 1px solid #1974CE80;
+  }
+  &__items {
+    a{
+      padding-top: 17px;
+      padding-top: calc(8px + (9) * (100vw - 320px) / (1200 - 320));
+      padding-bottom: calc(7px + (8) * (100vw - 320px) / (1200 - 320));
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: inherit;
+      border-bottom: 1px solid #1974CE80;
+      transition: all 0.1s ease 0s;
+      &::after{
+        content: '';
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: #1974CE;
+        background-image: url(../img/arrow-right-round.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+      &:hover, &:focus{
+        outline: none;
+        color: #1974CE;
+        @media (min-width: 768px) {
+          transform: translate(10px, 0);
+        }
+      }
+    }
+    @media (max-width: 767px) {
+      margin-bottom: 20px;
     }
   }
 }
