--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ body {
 }
 @media (max-width: 479px) {
   .card__img {
-    width: 200px;
+    width: 100px;
   }
 }
 .card__img img {
@@ -373,6 +373,14 @@ body {
   background-color: #1A4359;
   line-height: 1.3;
   color: #FBF9F3;
+}
+@media (max-width: 479px) {
+  .card__number {
+    top: 8px;
+    left: 8px;
+    width: 32px;
+    height: 32px;
+  }
 }
 .card__title {
   margin-bottom: 19px;
