--- a/css/style.scss
+++ b/css/style.scss
@@ -556,6 +556,7 @@ body{
   }
   &__content {
     margin-bottom: 2.75rem;
+    font-size: calc(0.93rem + (3) * (100vw - 320px) / (1200 - 320));
     text-align: justify;
     line-height: 1.3;
   }
@@ -629,21 +630,41 @@ body{
   }
   &__side {
     width: 100%;
+    overflow: hidden;
+    @media (max-width: 767px) {
+      aspect-ratio: 2 / 1;
+    }
     img{
+      object-fit: cover;
+      object-position: top;
       width: 100%;
+      height: 100%;
       max-width: 390px;
+      border-radius: 10px;
     }
   }
 }
 .category {
   &__header{
+    width: 100%;
     margin-bottom: calc(8px + (20) * (100vw - 320px) / (1200 - 320));
     cursor: default;
     @media (max-width: 767px) {
-      cursor: pointer;
+      cursor: pointer; 
+      &:hover{
+        h3{
+          color: #1A4359;
+        }
+      }
+      &:active{
+        h3{
+          color: #000;
+        }
+      }
     }
   }
   &__title {
+    text-align: left;
     font-family: "Roboto";
     font-size: calc(1.57rem + (8) * (100vw - 320px) / (1200 - 320));
     line-height: 1.07;
@@ -651,10 +672,13 @@ body{
   }
   &__body{
     // toggle hidden on mobile width
-    overflow: hidden;
+    transition: all 0.1s ease 0s;
+    @media (max-width: 767px){
+      overflow: hidden;
+    }
   }
   &__description {
-    font-size: calc(1rem + (3) * (100vw - 320px) / (1200 - 320));
+    font-size: calc(0.93rem + (4) * (100vw - 320px) / (1200 - 320));
     line-height: 1.38;
     padding-bottom: calc(8px + (5) * (100vw - 320px) / (1200 - 320));
     border-bottom: 1px solid #1974CE80;
@@ -666,6 +690,7 @@ body{
       display: flex;
       justify-content: space-between;
       align-items: center;
+      font-size: calc(0.93rem + (3) * (100vw - 320px) / (1200 - 320));
       color: inherit;
       border-bottom: 1px solid #1974CE80;
       transition: all 0.1s ease 0s;
