--- a/css/style.scss
+++ b/css/style.scss
@@ -838,3 +838,47 @@ body{
     }
   }
 }
+
+
+// level up ----------------------------------------------------------
+
+.levelup {
+  padding-top: calc(29px + (60) * (100vw - 320px) / (1200 - 320));
+  padding-bottom: calc(24px + (40) * (100vw - 320px) / (1200 - 320));
+  background-color: #1974CE;
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: calc(0px + (68) * (100vw - 320px) / (1200 - 320));
+    @media (max-width: 767px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  }
+  &__main {
+  }
+  &__title {
+    margin-bottom: calc(20px + (34) * (100vw - 320px) / (1200 - 320));
+    max-width: 528px;
+    font-size: calc(3rem + (54) * (100vw - 320px) / (1200 - 320));
+    line-height: 1;
+    color: #FBF9F3;
+  }
+  &__description {
+    margin-bottom: calc(14px + (4) * (100vw - 320px) / (1200 - 320));
+    font-size: calc(1rem + (4) * (100vw - 320px) / (1200 - 320));
+    line-height: 1.3;
+    color: #FBF9F3;
+  }
+  &__btn {
+    display: inline-block;
+    padding: 17px 24px 21px;
+    color: inherit;
+  }
+  &__img {
+    width: calc(164px + (300) * (100vw - 320px) / (1200 - 320));
+    img{width: 100%;}
+  }
+}
