--- a/css/style.css
+++ b/css/style.css
@@ -900,4 +900,129 @@ body {
 }
 .levelup__img img {
   width: 100%;
+}
+
+.footer {
+  padding-top: calc(23px + 40 * (100vw - 320px) / 880);
+  background-color: #1974CE;
+}
+.footer__main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+@media (max-width: 767px) {
+  .footer__main {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.footer__flags {
+  align-self: end;
+}
+@media (max-width: 767px) {
+  .footer__flags {
+    align-self: start;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .footer__about {
+    margin-bottom: 20px;
+  }
+}
+.footer__title {
+  margin-bottom: calc(10px + 15 * (100vw - 320px) / 880);
+  font-size: 1.45rem;
+  line-height: 1.25;
+  color: #fff;
+}
+@media (min-width: 768px) {
+  .footer__title {
+    cursor: default;
+  }
+}
+.footer__list {
+  overflow: hidden;
+  transition: all 0.1s ease 0s;
+}
+.footer__list li:last-child {
+  margin-bottom: 20px;
+}
+.footer__link {
+  display: block;
+  padding: 0.5em 0;
+  font-size: 16px;
+  line-height: 1;
+  color: #fff;
+}
+.footer__link:hover, .footer__link:focus {
+  color: rgba(255, 255, 255, 0.6980392157);
+}
+.footer__supported {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 24px;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #fff;
+}
+.footer__supported p {
+  width: 100%;
+}
+.footer__supported img {
+  width: -moz-min-content;
+  width: min-content;
+}
+@media (max-width: 767px) {
+  .footer__supported {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    -moz-column-gap: 0;
+         column-gap: 0;
+  }
+  .footer__supported img {
+    width: -moz-min-content;
+    width: min-content;
+  }
+}
+.footer__bottom {
+  padding: 48px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .footer__bottom {
+    flex-direction: column;
+  }
+}
+.footer__bottom li {
+  padding: 0 16px;
+}
+@media (max-width: 767px) {
+  .footer__bottom li {
+    padding: 16px 0;
+    width: 100%;
+    text-align: center;
+  }
+}
+.footer__bottom li:not(:last-child) {
+  border-right: 1px solid rgba(255, 255, 255, 0.6980392157);
+}
+@media (max-width: 767px) {
+  .footer__bottom li:not(:last-child) {
+    border-right: 0px solid rgba(255, 255, 255, 0.6980392157);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.6980392157);
+  }
+}
+.footer__bottom li a {
+  font-size: 12px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.6980392157);
+}
+.footer__bottom li a:hover, .footer__bottom li a:focus {
+  color: #fff;
 }/*# sourceMappingURL=style.css.map */
